kubernetes/objects/flights-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-flights-deploy
  labels:
    app: api-flights-app
spec:
  selector:
    matchLabels:
      app: api-flights-app
  replicas: $EKS_REPLICA_COUNT
  template:
    metadata:
      labels:
        app: api-flights-app
    spec:
      containers:
        - name: api-flights-app
          image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION_ID.amazonaws.com/am-flights-api:$FLIGHTS_API_LATEST
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "$EKS_CONTAINER_CPU_LIMIT"
              memory: "$EKS_CONTAINER_MEM_LIMIT"
            requests:
              cpu: "$EKS_CONTAINER_CPU_REQUEST"
              memory: "$EKS_CONTAINER_MEM_REQUEST"
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: api-flights-service
  labels:
    app: api-flights-app
spec:
  ports:
    - protocol: TCP
      port: 8081
      name: http
  selector:
    app: api-flights-app
