kubernetes/objects/users-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-users-deploy
  labels:
    app: api-users-app
spec:
  selector:
    matchLabels:
      app: api-users-app
  replicas: 1
  template:
    metadata:
      labels:
        app: api-users-app
    spec:
      containers:
        - name: api-users-app
          image: 026390315914.dkr.ecr.us-west-2.amazonaws.com/am-users-api:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "800m"
              memory: "2048Mi"
            requests:
              cpu: "350m"
              memory: "512Mi"
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: api-users-service
  labels:
    app: api-users-app
spec:
  ports:
    - protocol: TCP
      port: 8083
      name: http
  selector:
    app: api-users-app
