kubernetes/objects/ingress-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-auth
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  rules:
  - host: "*.elb.amazonaws.com"
    http:
      paths:
        ####################
        # AUTH API SERVICE #
        ####################
        - path: /login
          pathType: Prefix
          backend:
            service:
              name: api-auth-service
              port:
                number: 8443
