kubernetes/objects/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-http
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "am-eks.hitwc.link"
      http:
        paths:
          ####################
          # AUTH API SERVICE #
          ####################
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: api-auth-service
                port:
                  number: 8443
          #######################
          # FLIGHTS API SERVICE #
          #######################
          - path: /api/v1/airports
            pathType: Prefix
            backend:
              service:
                name: api-flights-service
                port:
                  number: 8081
          - path: /api/v1/routes
            pathType: Prefix
            backend:
              service:
                name: api-flights-service
                port:
                  number: 8081
          - path: /api/v1/airplanes
            pathType: Prefix
            backend:
              service:
                name: api-flights-service
                port:
                  number: 8081
          - path: /api/v1/airplaneTypes
            pathType: Prefix
            backend:
              service:
                name: api-flights-service
                port:
                  number: 8081
          - path: /api/v1/flights
            pathType: Prefix
            backend:
              service:
                name: api-flights-service
                port:
                  number: 8081
          ########################
          # BOOKINGS API SERVICE #
          ########################
          - path: /api/v1/bookings
            pathType: Prefix
            backend:
              service:
                name: api-bookings-service
                port:
                  number: 8082
          - path: /api/v1/passengers
            pathType: Prefix
            backend:
              service:
                name: api-bookings-service
                port:
                  number: 8082
          - path: /api/v1/payments
            pathType: Prefix
            backend:
              service:
                name: api-bookings-service
                port:
                  number: 8082
          #####################
          # USERS API SERVICE #
          #####################
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: api-users-service
                port:
                  number: 8083
          - path: /api/v1/roles
            pathType: Prefix
            backend:
              service:
                name: api-users-service
                port:
                  number: 8083
